// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic autoclosing snapshot 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  color: #3c3c3c;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 16px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .03em;
  -moz-letter-spacing: .03em;
  -ms-letter-spacing: .03em;
  letter-spacing: .03em;
  line-height: 1.5;
  border-radius: 2px;
  border-style: solid;
  border-width: 2px;
  padding-bottom: 15px;
  padding-left: 15px;
  padding-right: 15px;
  padding-top: 15px;
  position: relative;
  white-space: pre-wrap;
  overflow: hidden;
  max-height: 3000vh;
  opacity: 1;
  -webkit-transition: border 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,max-height 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,padding 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,opacity 250ms cubic-bezier(0.785,0.135,0.15,0.86);
  transition: border 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,max-height 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,padding 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,opacity 250ms cubic-bezier(0.785,0.135,0.15,0.86);
  color: #1e4035;
  background-color: #EDFCF8;
  border-color: #BCDFD2;
}

.c1 {
  -webkit-font-smoothing: antialiased;
  color: #3c3c3c;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 16px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 600;
  -webkit-letter-spacing: .03em;
  -moz-letter-spacing: .03em;
  -ms-letter-spacing: .03em;
  letter-spacing: .03em;
  line-height: 1.5;
  padding-bottom: 10px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Success
  </div>
  Card ending in 0000 is expiring soon.
</div>
`;

exports[`basic dismissable snapshot 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  color: #3c3c3c;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 16px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .03em;
  -moz-letter-spacing: .03em;
  -ms-letter-spacing: .03em;
  letter-spacing: .03em;
  line-height: 1.5;
  border-radius: 2px;
  border-style: solid;
  border-width: 2px;
  padding-bottom: 15px;
  padding-left: 15px;
  padding-right: 15px;
  padding-top: 15px;
  position: relative;
  white-space: pre-wrap;
  overflow: hidden;
  max-height: 3000vh;
  opacity: 1;
  -webkit-transition: border 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,max-height 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,padding 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,opacity 250ms cubic-bezier(0.785,0.135,0.15,0.86);
  transition: border 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,max-height 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,padding 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,opacity 250ms cubic-bezier(0.785,0.135,0.15,0.86);
  color: #1e4035;
  background-color: #EDFCF8;
  border-color: #BCDFD2;
}

.c1 {
  background-color: transparent;
  border: none;
  cursor: pointer;
  height: 15px;
  padding: 0;
  position: absolute;
  right: 15px;
  top: 15px;
  width: 15px;
}

<div
  className="c0"
>
  <button
    aria-label="close"
    className="c1"
    onClick={[Function]}
    onKeyPress={[Function]}
    type="button"
  >
    iconDismiss
  </button>
  Card.
</div>
`;

exports[`basic error snapshot 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  color: #3c3c3c;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 16px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .03em;
  -moz-letter-spacing: .03em;
  -ms-letter-spacing: .03em;
  letter-spacing: .03em;
  line-height: 1.5;
  border-radius: 2px;
  border-style: solid;
  border-width: 2px;
  padding-bottom: 15px;
  padding-left: 15px;
  padding-right: 15px;
  padding-top: 15px;
  position: relative;
  white-space: pre-wrap;
  overflow: hidden;
  max-height: 3000vh;
  opacity: 1;
  -webkit-transition: border 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,max-height 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,padding 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,opacity 250ms cubic-bezier(0.785,0.135,0.15,0.86);
  transition: border 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,max-height 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,padding 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,opacity 250ms cubic-bezier(0.785,0.135,0.15,0.86);
  color: #3c1f21;
  background-color: #FEF6F7;
  border-color: #F4C9CC;
}

.c1 {
  -webkit-font-smoothing: antialiased;
  color: #3c3c3c;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 16px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 600;
  -webkit-letter-spacing: .03em;
  -moz-letter-spacing: .03em;
  -ms-letter-spacing: .03em;
  letter-spacing: .03em;
  line-height: 1.5;
  padding-bottom: 10px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Error
  </div>
  Card ending in 0000 is expiring soon.
</div>
`;

exports[`basic information snapshot 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  color: #3c3c3c;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 16px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .03em;
  -moz-letter-spacing: .03em;
  -ms-letter-spacing: .03em;
  letter-spacing: .03em;
  line-height: 1.5;
  border-radius: 2px;
  border-style: solid;
  border-width: 2px;
  padding-bottom: 15px;
  padding-left: 15px;
  padding-right: 15px;
  padding-top: 15px;
  position: relative;
  white-space: pre-wrap;
  overflow: hidden;
  max-height: 3000vh;
  opacity: 1;
  -webkit-transition: border 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,max-height 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,padding 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,opacity 250ms cubic-bezier(0.785,0.135,0.15,0.86);
  transition: border 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,max-height 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,padding 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,opacity 250ms cubic-bezier(0.785,0.135,0.15,0.86);
  color: #285268;
  background-color: #F5FBFE;
  border-color: #C4E3F6;
}

.c1 {
  -webkit-font-smoothing: antialiased;
  color: #3c3c3c;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 16px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 600;
  -webkit-letter-spacing: .03em;
  -moz-letter-spacing: .03em;
  -ms-letter-spacing: .03em;
  letter-spacing: .03em;
  line-height: 1.5;
  padding-bottom: 10px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Information
  </div>
  Card ending in 0000 is expiring soon.
</div>
`;

exports[`basic snapshot no props 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  color: #3c3c3c;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 16px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .03em;
  -moz-letter-spacing: .03em;
  -ms-letter-spacing: .03em;
  letter-spacing: .03em;
  line-height: 1.5;
  border-radius: 2px;
  border-style: solid;
  border-width: 2px;
  padding-bottom: 15px;
  padding-left: 15px;
  padding-right: 15px;
  padding-top: 15px;
  position: relative;
  white-space: pre-wrap;
  overflow: hidden;
  max-height: 3000vh;
  opacity: 1;
  -webkit-transition: border 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,max-height 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,padding 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,opacity 250ms cubic-bezier(0.785,0.135,0.15,0.86);
  transition: border 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,max-height 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,padding 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,opacity 250ms cubic-bezier(0.785,0.135,0.15,0.86);
  display: none;
}

<div
  className="c0"
>
  
</div>
`;

exports[`basic snapshot with some props 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  color: #3c3c3c;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 16px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .03em;
  -moz-letter-spacing: .03em;
  -ms-letter-spacing: .03em;
  letter-spacing: .03em;
  line-height: 1.5;
  border-radius: 2px;
  border-style: solid;
  border-width: 2px;
  padding-bottom: 15px;
  padding-left: 15px;
  padding-right: 15px;
  padding-top: 15px;
  position: relative;
  white-space: pre-wrap;
  overflow: hidden;
  max-height: 3000vh;
  opacity: 1;
  -webkit-transition: border 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,max-height 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,padding 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,opacity 250ms cubic-bezier(0.785,0.135,0.15,0.86);
  transition: border 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,max-height 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,padding 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,opacity 250ms cubic-bezier(0.785,0.135,0.15,0.86);
  color: #7a6322;
  background-color: #FEF9ED;
  border-color: #E6DBBE;
}

<div
  className="c0"
>
  Card ending in 0000 is expiring soon.
</div>
`;

exports[`basic success snapshot 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  color: #3c3c3c;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 16px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .03em;
  -moz-letter-spacing: .03em;
  -ms-letter-spacing: .03em;
  letter-spacing: .03em;
  line-height: 1.5;
  border-radius: 2px;
  border-style: solid;
  border-width: 2px;
  padding-bottom: 15px;
  padding-left: 15px;
  padding-right: 15px;
  padding-top: 15px;
  position: relative;
  white-space: pre-wrap;
  overflow: hidden;
  max-height: 3000vh;
  opacity: 1;
  -webkit-transition: border 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,max-height 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,padding 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,opacity 250ms cubic-bezier(0.785,0.135,0.15,0.86);
  transition: border 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,max-height 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,padding 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,opacity 250ms cubic-bezier(0.785,0.135,0.15,0.86);
  color: #1e4035;
  background-color: #EDFCF8;
  border-color: #BCDFD2;
}

.c1 {
  -webkit-font-smoothing: antialiased;
  color: #3c3c3c;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 16px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 600;
  -webkit-letter-spacing: .03em;
  -moz-letter-spacing: .03em;
  -ms-letter-spacing: .03em;
  letter-spacing: .03em;
  line-height: 1.5;
  padding-bottom: 10px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Success
  </div>
  Card ending in 0000 is expiring soon.
</div>
`;

exports[`basic warning snapshot 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  color: #3c3c3c;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 16px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .03em;
  -moz-letter-spacing: .03em;
  -ms-letter-spacing: .03em;
  letter-spacing: .03em;
  line-height: 1.5;
  border-radius: 2px;
  border-style: solid;
  border-width: 2px;
  padding-bottom: 15px;
  padding-left: 15px;
  padding-right: 15px;
  padding-top: 15px;
  position: relative;
  white-space: pre-wrap;
  overflow: hidden;
  max-height: 3000vh;
  opacity: 1;
  -webkit-transition: border 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,max-height 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,padding 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,opacity 250ms cubic-bezier(0.785,0.135,0.15,0.86);
  transition: border 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,max-height 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,padding 0s cubic-bezier(0.785,0.135,0.15,0.86) 250ms,opacity 250ms cubic-bezier(0.785,0.135,0.15,0.86);
  color: #7a6322;
  background-color: #FEF9ED;
  border-color: #E6DBBE;
}

.c1 {
  -webkit-font-smoothing: antialiased;
  color: #3c3c3c;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 16px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 600;
  -webkit-letter-spacing: .03em;
  -moz-letter-spacing: .03em;
  -ms-letter-spacing: .03em;
  letter-spacing: .03em;
  line-height: 1.5;
  padding-bottom: 10px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Warning
  </div>
  Card ending in 0000 is expiring soon.
</div>
`;
